# mcp-relay

./: .gitignore  ENHANCEMENTS.md  LICENSE  README.md  pyproject.toml  relay.yaml  setup_env.sh
.github/workflows/: test.yml
demo/: mock_llm.py  research_report.py  run_demo.py  validate_capture.py
demo/scenarios/: burst_detection.yaml
docs/: academic-results.md  docx-style-guide.md  findings-initial.docx  literature.md  test-corpus.md  testing-strategy.md
mcp_relay/: __init__.py  config.py  relay.py
mcp_relay/core/: __init__.py  analysis.py  intercept.py  logging.py  policy.py
mcp_relay/harness/: __init__.py  assertions.py  runner.py
mcp_relay/policy/: __init__.py  decision.py  engine.py  rules.py
mcp_relay/profiles/: __init__.py  loader.py
mcp_relay/profiles/builtin/: adversarial.yaml  clean.yaml  degraded_recovery.yaml  degraded_static.yaml
mcp_relay/storage/: __init__.py  base.py  postgres.py  sqlite.py
mcp_relay/transport/: __init__.py  degraded.py  live.py  manager.py  offline.py  record.py  replay.py
scripts/: run_study.py
studies/: default.yaml  full_study.yaml
tests/: conftest.py  test_config.py  test_integration.py  test_llm_tool_calls.py  test_logging.py  test_passthrough.py  test_policy_engine.py  test_storage.py  test_transport.py
tests/fixtures/: test_cases.yaml
